--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(ImageApprovalsDemos)
 include("conan.cmake")
 
 conan_cmake_run(
-    REQUIRES "imageapprovals/master@ppodsiadly/testing"
+    REQUIRES "imageapprovals/master@ppodsiadly/stable"
              "doctest/2.3.6"
              "sdl2/2.0.10@bincrafters/stable"
              "glew/2.1.0@bincrafters/stable"
