--- a/gl_demo/CMakeLists.txt
+++ b/gl_demo/CMakeLists.txt
@@ -2,12 +2,14 @@ cmake_minimum_required(VERSION 3.10)
 
 project(GLDemo)
 
-find_package(ImageApprovals REQUIRED)
+if(NOT TARGET ImageApprovals::ImageApprovals)
+    find_package(ImageApprovals REQUIRED)
+endif()
+
 find_package(doctest REQUIRED)
 find_package(sdl2 REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(OpenGL REQUIRED)
-find_package(ZLIB REQUIRED)
 
 set(sources
     "src/GLFixture.cpp"
@@ -30,7 +32,6 @@ target_link_libraries(
         sdl2::sdl2
         GLEW::GLEW
         OpenGL::GL
-        ZLIB::ZLIB
         "$<$<CXX_COMPILER_ID:MSVC>:-IGNORE:4099>"
 )
 
