--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,6 +2,8 @@ environment:
   matrix:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
     - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu
+      CC: gcc-7
+      CXX: g++-7
 
 platform:
   - x64
