--- a/.github/workflows/is_up_to_date.yml
+++ b/.github/workflows/is_up_to_date.yml
@@ -19,19 +19,6 @@ jobs:
           repository: p-podsiadly/ImageApprovals
           path: upstream
 
-      - name: Update submodules
-        run: |
-          cd demos/
-          git submodule update --init
-
       - name: Check commit hashes
         run: |
-          VER_IN_USE=`(cd demos/ImageApprovals/ && git log -n1 | grep commit)`
-          UPSTREAM_VER=`(cd upstream/ && git log -n1 | grep commit)`
-          
-          if [ "$VER_IN_USE" != "$UPSTREAM_VER" ]; then
-            echo "The project does not use latest master version."
-            echo "  Version in use: $VER_IN_USE"
-            echo "  Upstream master: $UPSTREAM_VER"  
-            exit 1
-          fi
+          diff demos/dependencies/ImageApprovals/ImageApprovals.hpp upstream/single_header/ImageApprovals.hpp
